<?xml version="1.0"?>
<package>
  <name>ros_leishen_lidar</name>
  <version>0.1.1</version>
  <description>Leishen LS02A LiDAR</description>

  <maintainer email="marton@nowtech.hu">nils</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
